G2P-1345, 1089: overflow of CSS fixed in theme

--- a/g2p_theme/static/src/css/style.css
+++ b/g2p_theme/static/src/css/style.css
@@ -149,8 +149,9 @@ body {
 .o_technical_modal .modal-footer .btn-secondary:focus {
     box-shadow: none !important;
 }
-.modal-content , main {
-    overflow:auto !important;
+.modal-content,
+main {
+    overflow: auto !important;
 }
 .o_form_buttons_view .o_form_button_create:focus-visible,
 .o_form_button_cancel:focus-visible,
